# sspwd

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  coverage.xml  flow.mmd  pyproject.toml
.github/workflows/: tests.yml
scripts/: change_master_password.py  examine_vault.py
src/sspwd/: __init__.py  __version__.py  cli.py
src/sspwd/storage/: __init__.py  base.py  icon_cache.py  sqlite.py
src/sspwd/ui/: __init__.py  api.py  server.py
src/sspwd/ui/static/: index.html
src/sspwd/ui/static/assets/: index-B-9wwvUb.js  index-BJnatssi.css  index-BYeGpcdS.js  index-B_fO_PBS.js  index-CS0tP4LC.css  index-CzTusXtk.js  index-D2QAvxm2.js  index-DKXQMmmc.js  index-DOBAn1vF.css  index-DbZtmwmz.css  index-DvdajZHJ.js  index-GBqlnw8n.js  index-Ig0tnxDh.css  index-JmaNTu-M.css  index-heu7lCb0.css
tests/: test_api.py  test_cli.py  test_icon_cache.py  test_server.py  test_storage.py
